src/components/toast/toast.scss
@import "../../styles/freshworks.scss";

:host {
  display: none;
}

:host(.is-open) {
  display: block;
  animation-duration: 0.2s;
  animation-name: fadeIn;
}

:host(.toast) {
  position: fixed;
  top: 10px;
  width: 400px;
  padding: 10px;
  border: 1px solid var(--color-smoke-50);
  border-radius: 4px;
  background-color: var(--color-milk);
}

.toast {
  :host(&.success) {
    border-top: 5px solid var(--color-jungle-500);
  }

  :host(&.error) {
    border-top: 5px solid var(--color-persimmon-800);
  }

  :host(&.warning) {
    border-top: 5px solid var(--color-casablanca-300);
  }

  :host(&.inprogress) {
    border-top: 5px solid var(--color-azure-800);
  }

  :host(&.top-center) {
    left: calc(50% - 200px);
  }

  :host(&.top-left) {
    left: 10px;
  }

  :host(&.top-right) {
    right: 10px;
  }
}

.content {
  color: var(--color-elephant-900);
  line-height: 20px;
  width: 83%;
  float: left;
  margin: 2px auto 8px;
  font-size: var(--font-size-14);
  font-weight: var(--font-weight-500);
}

.icon {
  margin: 6px 16px 0 6px;
  vertical-align: text-top;
  float: left;
}

.action-link {
  color: var(--color-azure-800);
  line-height: 14px;
  margin-left: 38px;
  cursor: pointer;
  float: left;
  font-size: var(--font-size-12);
  font-weight: var(--font-weight-600);
}

.cross {
  float: right;
  cursor: pointer;
  margin-right: 6px;
}

@keyframes fadeOut {
  100% {
    top: -600px;
  }
}

@keyframes fadeIn {
  0% {
    top: -600px;
  }

  100% {
    top: 10px;
  }
}

:host(.fade-out) {
  animation-duration: 1s;
  animation-name: fadeOut;
}

